--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -50,9 +50,18 @@ button.forward{
     echo UrlFrom(GetWidget('siteConfig')->getParameter('rightIcon')[0].'?thumb=>48x>48&tint=rgb(255, 255, 255)');?>");
 }
 
-.tileOptionContainer.province{
+.tileOptionContainer.province .tileButton{
     background-image: url("<?php 
     echo UrlFrom(GetWidget('siteConfig')->getParameter('checkIcon')[0].'?thumb=>48x>48&tint=rgb(60, 179, 113)');?>");
+}
+.tileOptionContainer.province .tileButton {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 40%;
+}
+
+.tileOptionContainer.province.disabled .tileButton {
+    background: none;
 }
 
 
