administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -354,7 +354,7 @@ span.array-module.ui-list-view.story-list {
     right: 30px;
 }
 
-.ltr>.shifted {
+.left-center.ltr>.shifted {
         position: relative;
         left: 400px;
 }
