--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -600,7 +600,7 @@ textarea[disabled] {
 }
 
 
-span.image-file.media-item {
+span.image-file.media-item, span.external-file.media-item, span.video-file.media-item {
     position: relative;
     display: inline-block;
     text-align: center;
