--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -280,10 +280,12 @@ span.delete-btn, span.edit-btn {
     background-size: 30%;
     background-position: center;
     background-repeat: no-repeat;
+    opacity:0.1;
 }
 .story-navigation button.active {
     background-color: rgb(84, 154, 230);
     cursor:pointer;
+    opacity:1;
 }
 
 
