--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -480,7 +480,10 @@ span.array-module.ui-list-view.story-list {
     border-radius:3px;
 }
 
-.contact-btn{}
+.contact-btn{
+        padding: 10px 15px;
+    font-size: unset;
+}
 
 .flow-left {
     position: absolute;
