--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -689,7 +689,6 @@ textarea[disabled] {
 .upload-btns span.image, .upload-btns span.video  {
     background-size: 100%;
     display: inline-block;
-    float: right;
     text-align: right;
 }
 
@@ -708,6 +707,14 @@ textarea[disabled] {
 .upload-btns span.video:after {
     content: "add video";
 
+}
+
+.your-profile-image .upload-btns span.image {
+    float: right;
+}
+
+.your-profile-image .upload-btns span.image:after {
+    content: "select image";
 }
 
 .your-profile-image span.video.noIcon {
