--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -698,6 +698,7 @@ textarea[disabled] {
     white-space: nowrap;
     display: inline-block;
     margin: 0;
+    margin-left: 10px;
 }
 
 .upload-btns span.image:after {
