administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -610,11 +610,14 @@ span.array-module.ui-list-view.story-list {
     white-space:nowrap;
 }
 
-.journey-card .inline-btn {
+.journey-card .inline-btn, .edit.inline-btn {
     background: transparent;
     border: none;
     color: cornflowerblue;
     font-style: italic;
+}
+.edit.inline-btn {
+    float:right;
 }
 
 
