--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -1067,6 +1067,14 @@ p.info {
     font-style: italic;
 }
 
+@media only screen and (max-width: 1000px) {
+  .site-logo h1 {
+    font-size: 0;
+}
 
+.menu-links {
+    display: none;
+}
+}
 
 
