--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -319,10 +319,12 @@ span.delete-btn, span.edit-btn {
 
 span.array-module.ui-list-view.story-list {
     margin-top: 10px;
+    white-space: nowrap;
 }
 
 .story-list .story-card{
     vertical-align: top;
+    white-space: normal;
 }
 
 .ui-view.story-card {
