--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -473,6 +473,20 @@ span.array-module.ui-list-view.story-list {
      background-color: #549ae6;
 }
 
+.SideBarWidget.left.collapsed>.toggle-button {
+    width: 80px;
+    height: 80px;
+    right: -50px;
+    border-radius: 0 0 3px 0;
+}
+
+.SideBarWidget.right.collapsed>.toggle-button {
+    width: 80px;
+    height: 80px;
+    left: -50px;
+    border-radius: 0 0 0 3px;
+}
+
 .rtl>.shifted {
     position: relative;
     right: 400px;
