--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -469,7 +469,7 @@ span.array-module.ui-list-view.story-list {
     background-color: #ffcc00;
 }
 
-.SideBarWidget.right>div.toggle-button:hover{
+.SideBarWidget.right>div.toggle-button:hover,.SideBarWidget.left>div.toggle-button:hover{
      background-color: #549ae6;
 }
 
