administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -150,8 +150,9 @@ button.form-btn.register.secondary-btn:hover {
 }
 
 .left-center .tileButtonContainer {
-    border: 2px solid white;
+    border: 2px solid #f0b71c;
     box-sizing: border-box;
+    background-color: #f0b71c;
 }
 
 .left-center .tileButtonContainer>.tileButton {
