administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -30,6 +30,10 @@
     box-sizing: border-box;
 }
 
+.analytic-item .layer-hidden {
+    opacity: 0.3;
+}
+
 
 .site-logo h1 span {
     display: block;
