--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -1194,7 +1194,26 @@ p.info {
     .site-logo h1 {
         line-height: 55px;
     }
+    
+    .menu-links {
+        left: 380px;
+    }
    
+}
+
+
+@media only screen and (max-width: 1200px) {
+    
+    .menu-links {
+        width: 230px;
+        text-align: left;
+        top: 12px;
+    }
+    
+    .menu-links a {
+        height: 22px;
+    }
+    
 }
 
 @media only screen and (max-width: 1000px) {
