administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -1217,7 +1217,9 @@ p.info {
 }
 
 @media only screen and (max-width: 1000px) {
-  .site-logo h1>span {
+    .site-logo h1>span {
+        font-size:0;
+    }
     
     .menu-links {
         display: none;
