administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -1226,6 +1226,12 @@ p.info {
     }
 }
 
+@media only screen and (max-width: 1000px) {
+    .site-logo h1 {
+        font-size:0;
+    }
+}
+
 @media only screen and (max-width: 600px) {
  .site-logo h1{
      height:60px;
