--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -95,6 +95,29 @@
     
 }
 
+.ui-view.page-content {
+
+    .ui-view.featured-stories {
+        font-size: 1.5em;
+        font-weight: 100;
+        max-width: 1000px;
+        margin: auto;
+    
+    
+        .ui-view.featured-story {
+            display: inline-block;
+            width: calc( 33% - 20px );
+            box-shadow: 0 0 3px rgba(0,0,0,0.3);
+            min-height: 300px;
+            margin: 10px;
+            padding: 20px;
+            box-sizing: border-box;
+            border-radius: 7px;
+            background-color: rgba(0,0,0,0.05);
+        }
+    }
+
+}
 
 
 
