--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -6,15 +6,13 @@
 
 
     &:after {
-        background-image: url("https://images.squarespace-cdn.com/content/v1/5ee56dbe30c9593f5105f19c/1592244537146-K72WYV6R1FMFJ4267ZJO/60s+logo.png?format=1500w");
+        background-image: url(https://images.squarespace-cdn.com/content/v1/5ee56db…/1592244537146-K72WYV6R1FMFJ4267ZJO/60s+logo.png?format=1500w);
         position: absolute;
         content: "";
-        height: 200px;
-        width: 200px;
+        height: 250px;
+        width: 250px;
         display: inline-block;
         background-size: cover;
-        top: 25px;
-        left: 25px;
     }
 }
 
