--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1,3 +1,19 @@
+
+
+.header-menu {position: absolute;top: 100px;left: 300px;}
+
+.ui-view.menu-item-link {
+    width: 200px;
+    height: 30px;
+    background: white;
+    display: inline-block;
+    margin: 10px;
+}
+
+
+
+
+
 .ui-view.page-header {
    
    
