--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -177,29 +177,37 @@
 
 
 
+[data-template-name="form"]{
+
+    h2 {
+        color: #4d8673;
+        font-size: 50px;
+        font-weight: 400;
+        text-shadow: 0 0 7px white;
+    }
 
 
-
-.form-navigation-btns {
-    white-space: nowrap;
-    display: inline-block;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: whitesmoke;
-    
-    button {
+    .form-navigation-btns {
+        white-space: nowrap;
         display: inline-block;
-        padding: 10px 20px;
-        background-color: #a1d3c2;
-        font-size: 25px;
-        margin: 5px;
-        float: right;
-        border: none;
-        border-radius: 3px;
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        padding: 20px;
+        box-sizing: border-box;
+        background-color: whitesmoke;
+        
+        button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #a1d3c2;
+            font-size: 25px;
+            margin: 5px;
+            float: right;
+            border: none;
+            border-radius: 3px;
+        }
     }
 }
 
