--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -120,7 +120,7 @@ $buttonColorHover:darken(#a1d3c2, 10%);
         text-align:center;
         
         /*
-         * demo
+         * TODO get rid of this
          */
         
         &.un-rendered:before, &.un-rendered:after {
@@ -131,21 +131,14 @@ $buttonColorHover:darken(#a1d3c2, 10%);
             font-size: 40px;
             margin: 10px;
             margin-bottom: 40px;
-            
-            &:hover{
-                background-color: $buttonColorHover;
-            }
-            
+        
         }
+        
         &.un-rendered:after {
             content: "Button Two";
         }
-            
-        
         
     }
-    
-    
     
 }
 
@@ -213,6 +206,7 @@ $buttonColorHover:darken(#a1d3c2, 10%);
             float: right;
             border: none;
             border-radius: 3px;
+            curser:pointer;
             
             &:hover{
                 background-color: $buttonColorHover;
