administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -216,7 +216,7 @@ $buttonColorHover:darken(#a1d3c2, 10%);
 }
 
 .pb-c:after {
-    background-color:none;
+    background-color:transparent;
 }
 
 
