--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -207,11 +207,13 @@ $buttonColorHover:darken(#a1d3c2, 10%);
             border: none;
             border-radius: 3px;
             cursor: pointer;
-            transition:background-color 1s;
+            transition:background-color 1s, box-shadow 1s;
+            box-shadow: 0 0 3px rgb(0 0 0 / 20%);
             
             &:hover{
                 background-color: $buttonColorHover;
-                transition:background-color 0.3s;
+                box-shadow: 0 0 8px rgb(0 0 0 / 30%);
+                transition:background-color 0.3s, box-shadow 0.3s;
             }
         }
     }
