--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1,3 +1,7 @@
+@charset "utf-8";
+@import url("/webresources/font-awesome-4.7.0/css/font-awesome.min.css");
+
+
 $buttonColor:#a1d3c2;
 $buttonColorHover:darken(#a1d3c2, 10%);
 
