--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -243,6 +243,25 @@ $buttonColorHover:darken(#a1d3c2, 10%);
 
 
 
+button.inline-edit {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 0;
+    border: none;
+    background: white;
+    position: relative;
+    z-index: 1;
+    box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    float: right;
+    
+    &:after {
+        content: "\0f040";
+        font-family: 'FontAwesome';
+    }
+}
+
 
 
 
