administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -259,6 +259,7 @@ button.inline-edit {
     &:after {
         content: "\0f040";
         font-family: 'FontAwesome';
+        color:$buttonColor;
     }
 }
 
