--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -63,6 +63,7 @@ $buttonColorHover:darken(#a1d3c2, 10%);
         width: 250px;
         display: inline-block;
         background-size: cover;
+        left: 0;
     }
 }
 
