--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -245,22 +245,30 @@ $buttonColorHover:darken(#a1d3c2, 10%);
 
 
 button.inline-edit {
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    display: inline-block;
-    padding: 0;
+   
     border: none;
-    background: white;
-    color:$buttonColorHover;
-    position: relative;
-    z-index: 1;
-    box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    background: transparent;
+
+
     float: right;
     
     &:after {
         content: "\0f040";
         font-family: 'FontAwesome';
+        
+            width: 30px;
+            height: 30px;
+            border-radius: 100%;
+            display: inline-block;
+            padding: 0;
+            border: none;
+            background: white;
+            color: #7ec3ab;
+            position: relative;
+            z-index: 1;
+            box-shadow: 0 0 3px rgb(0 0 0 / 20%);
+            line-height: 30px;
+            text-align: center;
         
     }
 }
@@ -268,7 +276,7 @@ button.inline-edit {
 
 .intro-section, .page-content{
     
-    button.inline-edit{
+    button.inline-edit:after{
         background-color:$buttonColor;
         color:white;
     }
