--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -249,7 +249,7 @@ button.inline-edit {
     border: none;
     background: transparent;
 
-
+    
     float: right;
     
     &:after {
@@ -265,6 +265,7 @@ button.inline-edit {
             background: white;
             color: #7ec3ab;
             position: relative;
+            top: -30px;
             z-index: 1;
             box-shadow: 0 0 3px rgb(0 0 0 / 20%);
             line-height: 30px;
